[package]
name = "fluxy"
version = "0.2.1"
edition = "2021"
license = "MIT"
keywords = ["proxy", "http", "pool"]
categories = ["command-line-utilities"]
repository = "https://github.com/xxxbrian/fluxy"
description = "An HTTP proxy that uses random IP addresses from a pool"

[dependencies]
cidr = "0.3"
getopts = "0.2"
hyper = { version = "1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "io-util"] }
rand = "0.8"

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = 3
codegen-units = 1
overflow-checks = false
panic = "abort"
incremental = false
debug = false
rpath = false
