[package]
name = "fluxy"
version = "0.3.3"
authors = ["Bojin Li <hi@bojin.li>"]
edition = "2021"
license = "MIT"
keywords = ["proxy", "http", "socks5", "udp", "ip-pool"]
categories = ["command-line-utilities"]
repository = "https://github.com/xxxbrian/fluxy"
description = "Async HTTP/SOCKS5 proxy with randomized source IP pools and UDP support"

[dependencies]
cidr = "0.3"
getopts = "0.2"
hyper = { version = "1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "io-util"] }
fastrand = "2.3"
fast-socks5 = "1.0.0-rc.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
nu-ansi-term = "0.50"
chrono = "0.4"
socket2 = "0.5"

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = 3
codegen-units = 1
overflow-checks = false
panic = "abort"
incremental = false
debug = false
rpath = false
